--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   </header>
   <main class="max-w-5xl mx-auto px-6 sm:px-8 pt-12 pb-24">
    <section class="mb-20 flex flex-col items-center text-center" id="home">
-    <img alt="Portrait of Vedant Manna, a young Indian male student with short black hair, wearing a casual shirt, smiling confidently" class="rounded-full w-36 h-40 mb-8 shadow-lg" height="150" loading="lazy" src="images/vedant.jpg"/>
+    <img alt="Portrait of Vedant Manna, a young Indian male student with short black hair, wearing a casual shirt, smiling confidently" class="rounded-full w-36 h-40 mb-8 shadow-lg" height="150" loading="lazy" src="vedant.jpg"/>
     <h1 class="text-4xl sm:text-5xl font-extrabold text-[#1a73e8] mb-2">
      Vedant Manna
     </h1>
