--- a/index.html
+++ b/index.html
@@ -178,26 +178,26 @@ Off the screen, you'll find me obsessing over Cricket, speeding through F1 stats
    </section>
    <section class="mb-20" id="ug">
     <h2 class="text-3xl font-semibold text-gray-900 mb-8 border-b-4 border-[#1a73e8] inline-block pb-1">
-     Undergraduate Background
+     Academic Background
     </h2>
     <p class="text-gray-800 max-w-3xl mb-6">
-     Bachelor of Science (B.Sc) Major in Physics
+     Bachelor's Major in Data Science & Artificial Intelligence
     </p>
     <div class="space-y-6 max-w-3xl">
      <article class="border border-gray-200 rounded-lg p-6 hover:shadow-lg transition-shadow duration-300">
       <h3 class="text-xl font-semibold mb-2 text-[#1a73e8]">
-       Particle Accelerations and Cyclotrons
+       Blood Cell Classification using CNN
       </h3>
       <p class="text-gray-700 leading-relaxed">
-       Studied the physics and engineering principles behind particle accelerators and cyclotrons, including experimental setups and data analysis.
+       Developed a CNN model to classify blood cells from microscopic images using deep learning techniques like convolution, pooling, activation functions, dropout, and data augmentation. The project involved image preprocessing, training, and evaluation, showcasing the application of AI in medical diagnostics.
       </p>
      </article>
      <article class="border border-gray-200 rounded-lg p-6 hover:shadow-lg transition-shadow duration-300">
       <h3 class="text-xl font-semibold mb-2 text-[#1a73e8]">
-       Analysis of Negative Index Metamaterials
+       Sentiment Analysis of Customer Product Reviews
       </h3>
       <p class="text-gray-700 leading-relaxed">
-       Researched the properties and applications of negative index metamaterials, focusing on their electromagnetic behavior and potential uses.
+       Built a sentiment analysis model to classify customer product reviews as positive or negative. Applied NLP techniques for text preprocessing and trained machine learning models for accurate sentiment classification. Developed a Flask-based web application to allow users to input reviews or upload CSV files for real-time sentiment analysis with a clean, modern UI.
       </p>
      </article>
     </div>
